[gd_scene load_steps=18 format=2]

[ext_resource path="res://textures/mom.png" type="Texture" id=1]
[ext_resource path="res://scripts/characters/CharacterMover.gd" type="Script" id=2]
[ext_resource path="res://scenes/Mom.gd" type="Script" id=3]
[ext_resource path="res://scripts/characters/VisionSystem.gd" type="Script" id=4]
[ext_resource path="res://scenes/Mom/StateMachine.gd" type="Script" id=5]
[ext_resource path="res://scenes/Mom/Idle.gd" type="Script" id=6]
[ext_resource path="res://scenes/Mom/LookAround.gd" type="Script" id=7]
[ext_resource path="res://scenes/Mom/Chase.gd" type="Script" id=8]
[ext_resource path="res://scenes/Mom/Search.gd" type="Script" id=9]
[ext_resource path="res://shaders/canvas_mat_light_only.tres" type="Material" id=11]
[ext_resource path="res://scenes/Mom/Work.gd" type="Script" id=12]
[ext_resource path="res://scripts/characters/InteractionSystem.gd" type="Script" id=13]
[ext_resource path="res://audio/Mom/footstep.wav" type="AudioStream" id=14]
[ext_resource path="res://audio/Mom/alert.wav" type="AudioStream" id=15]

[sub_resource type="CircleShape2D" id=5]
radius = 8.0

[sub_resource type="CircleShape2D" id=4]
radius = 5.13763

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 5.5 )

[node name="Mom" type="KinematicBody2D"]
light_mask = 2
collision_layer = 2
collision_mask = 3
script = ExtResource( 3 )
raycast_paths = [ NodePath("Sprite/AvoiderRaycast_Front"), NodePath("Sprite/AvoiderRaycast_InnerLeft"), NodePath("Sprite/AvoiderRaycast_InnerRight"), NodePath("Sprite/AvoiderRaycast_OuterRight"), NodePath("Sprite/AvoiderRaycast_OuterLeft") ]

[node name="CharacterMover" type="Node" parent="."]
script = ExtResource( 2 )
body_path = NodePath("..")
speed = 175
run_speed = 300
sneak_speed = 100

[node name="InteractionSystem" type="Node" parent="."]
script = ExtResource( 13 )
area_path = NodePath("../Sprite/InteractionArea")

[node name="VisionSystem" type="Node2D" parent="."]
script = ExtResource( 4 )
body_path = NodePath("../Sprite")

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 1.95099, -0.0150146 )
shape = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.86237, 0 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 2
material = ExtResource( 11 )
rotation = -1.5708
texture = ExtResource( 1 )

[node name="InteractionArea" type="Area2D" parent="Sprite"]
position = Vector2( 0, -10.049 )
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/InteractionArea"]
shape = SubResource( 3 )

[node name="AvoiderRaycast_Front" type="RayCast2D" parent="Sprite"]
enabled = true
cast_to = Vector2( 0, -30 )
collision_mask = 4
collide_with_areas = true

[node name="AvoiderRaycast_InnerLeft" type="RayCast2D" parent="Sprite"]
position = Vector2( -4, 0 )
enabled = true
cast_to = Vector2( 0, -30 )
collision_mask = 4
collide_with_areas = true

[node name="AvoiderRaycast_OuterLeft" type="RayCast2D" parent="Sprite"]
position = Vector2( -8, 0 )
enabled = true
cast_to = Vector2( 0, -30 )
collision_mask = 4
collide_with_areas = true

[node name="AvoiderRaycast_InnerRight" type="RayCast2D" parent="Sprite"]
position = Vector2( 4, 0 )
enabled = true
cast_to = Vector2( 0, -30 )
collision_mask = 4
collide_with_areas = true

[node name="AvoiderRaycast_OuterRight" type="RayCast2D" parent="Sprite"]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 0, -30 )
collision_mask = 4
collide_with_areas = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )
start_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Chase" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Search" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="LookAround" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Work" type="Node" parent="StateMachine"]
script = ExtResource( 12 )
pause_timeout = null

[node name="StepPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
max_distance = 350.0
attenuation = 2.0

[node name="StatusPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
max_distance = 350.0
attenuation = 2.0

[node name="StepTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="AnnoyanceDecayTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="AnnoyanceGrowthTimer" type="Timer" parent="."]
wait_time = 1.5
